# libginstapaper

./: .travis.yml  Makefile.am  README  Readme.md  configure.ac
ginstapaper/: Makefile.am  ginstapaper-bookmark.c  ginstapaper-bookmark.h  ginstapaper-bookmarks-call.c  ginstapaper-bookmarks-call.h  ginstapaper-proxy.c  ginstapaper-proxy.h  ginstapaper.h
tests/: Makefile.am  auth.c  bookmark.c  credentials.h  gtestutils.c
